schema/testdata/validation_attribute_expression_unresolvable_lhs/schema.keel
model Post {
  fields {
    author Author
  }

  @permission(
    expression: post.autho.name == "adam",
    actions: [get]
  )

  @permission(
    expression: "dave",
    actions: [get]
  )

  @permission(
    expression: post.author.name,
    actions: [get]
  )
}

model Author {
  fields {
    name Text
  }
}