schema/testdata/errors/expression_array_operator_mismatch.keel
model Post {
    fields {
        authors Author[]
    }

    @permission(
        //expect-error:27:28:AttributeExpressionError:cannot use operator '>' with types Text and Text[]
        expression: "bob" > post.authors.name,
        actions: [get]
    )
}

model Author {
    fields {
        name Text
        post Post
    }
}
